--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "test": "jest",
     "test:dev": "jest --watch"
   },
+
   "dependencies": {
-    "@magento/peregrine": "latest",
+
+      "@fortawesome/fontawesome-svg-core": "^1.2.32",
+      "@fortawesome/free-regular-svg-icons": "^5.15.1",
+      "@fortawesome/free-solid-svg-icons": "^5.15.1",
+      "@fortawesome/react-fontawesome": "^0.1.11",
+      "@magento/pwa-buildpack": ">=6.0.0",
+
+
     "@magento/venia-ui": "latest",
-    "identity-obj-proxy": "^3.0.0",
-    "jest-transform-graphql": "^2.1.0",
     "react": "~16.9.0",
     "react-dom": "^16.12.0"
   },
@@ -20,7 +26,9 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-class-properties": "^7.12.1,",
     "@testing-library/react": "^11.1.0",
-    "babel-jest": "lasted",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-transform-graphql": "^2.1.0",
+    "babel-jest": "^26.5.2",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "jest": "^26.5.3",
